fix image on mobile

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -33,7 +33,7 @@ header {
   min-height: 500px;
   width: 100%;
   background: #161415 url(../images/header-background.png) no-repeat top center;
-  box-shadow:inset 0 0 0 2000px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.3);
   background-size: cover !important;
   -webkit-background-size: cover !important;
   text-align: center;
@@ -208,17 +208,24 @@ ul#nav li.current a {
   overflow: hidden;
 }
 
-#about a, #about a:visited  { color: #fff; }
-#about a:hover, #about a:focus { color: #11ABB0; }
+#about a,
+#about a:visited {
+  color: #fff;
+}
+#about a:hover,
+#about a:focus {
+  color: #11abb0;
+}
 
-#about h2, #about h3{
-   font: 22px/30px 'opensans-bold', sans-serif;
-   color: #fff;
-   margin-bottom: 12px;
+#about h2,
+#about h3 {
+  font: 22px/30px "opensans-bold", sans-serif;
+  color: #fff;
+  margin-bottom: 12px;
 }
 #about p {
-   line-height: 30px;
-   color: #7A7A7A;
+  line-height: 30px;
+  color: #7a7a7a;
 }
 #about .information {
   width: 100%;
@@ -298,7 +305,7 @@ ul#nav li.current a {
   padding-right: 10%;
 }
 #resume .tab-list {
-  margin-bottom: 30px
+  margin-bottom: 30px;
 }
 
 .education,
